chore: update libdbus-c++-dev to 0.9.0-12
C++ API for D-Bus (development package)

Issue: https://github.com/linuxdeepin/developer-center/issues/5819
Log: update repo

--- a/debian/control
+++ b/debian/control
@@ -10,9 +10,9 @@ Build-Depends:
  libefl-all-dev,
  libexpat1-dev,
  libglib2.0-dev,
- libgtkmm-2.4-dev (>= 1:2.24.4-2~) <!nocheck>,
-Standards-Version: 4.6.0
-Homepage: http://sourceforge.net/projects/dbus-cplusplus/
+Rules-Requires-Root: no
+Standards-Version: 4.6.2
+Homepage: https://sourceforge.net/projects/dbus-cplusplus/
 Vcs-Git: https://salsa.debian.org/debian/dbus-cplusplus.git
 Vcs-Browser: https://salsa.debian.org/debian/dbus-cplusplus
 
@@ -28,14 +28,15 @@ Breaks:
  libdbus-c++-1-0,
 Replaces:
  libdbus-c++-1-0,
-Description: C++ API for D-Bus (runtime package)
- Dbus-c++ attempts to provide a C++ API for D-Bus. The library has a glib/gtk
- and an Ecore mainloop integration. It also offers an optional own main loop.
+Description: C++ API for D-Bus (runtime libraries)
+ DBus-c++ attempts to provide a C++ API for D-Bus. The library has a GLib/GTK
+ and an Ecore main loop integration. It also offers an optional own main loop.
  .
  This package includes shared object files.
 
 Package: libdbus-c++-bin
 Architecture: any
+Multi-Arch: allowed
 Section: utils
 Depends:
  libdbus-c++-1-0v5 (= ${binary:Version}),
@@ -48,8 +49,8 @@ Breaks:
 Replaces:
  libdbus-c++-dev (<< 0.9.0-5),
 Description: C++ API for D-Bus (utilities)
- Dbus-c++ attempts to provide a C++ API for D-Bus. The library has a glib/gtk
- and an Ecore mainloop integration. It also offers an optional own main loop.
+ DBus-c++ attempts to provide a C++ API for D-Bus. The library has a GLib/GTK
+ and an Ecore main loop integration. It also offers an optional own main loop.
  .
  This package includes binary utilities.
 
@@ -59,11 +60,12 @@ Architecture: any
 Multi-Arch: same
 Depends:
  libdbus-c++-1-0v5 (= ${binary:Version}),
- libdbus-c++-bin (= ${binary:Version}),
+ libdbus-c++-bin:any (= ${binary:Version}),
+ libdbus-1-dev (>= 0.60),
  ${misc:Depends},
 Description: C++ API for D-Bus (development package)
- Dbus-c++ attempts to provide a C++ API for D-Bus. The library has a glib/gtk
- and an Ecore mainloop integration. It also offers an optional own main loop.
+ DBus-c++ attempts to provide a C++ API for D-Bus. The library has a GLib/GTK
+ and an Ecore main loop integration. It also offers an optional own main loop.
  .
  This package includes static object and header files.
 
@@ -76,7 +78,7 @@ Depends:
 Suggests:
  libdbus-c++-dev,
 Description: C++ API for D-Bus (documentation)
- Dbus-c++ attempts to provide a C++ API for D-Bus. The library has a glib/gtk
- and an Ecore mainloop integration. It also offers an optional own main loop.
+ DBus-c++ attempts to provide a C++ API for D-Bus. The library has a GLib/GTK
+ and an Ecore main loop integration. It also offers an optional own main loop.
  .
  This package includes the documentation files.
